# demodb-to-datalake

./: Cargo.toml  README.md  config.json
examples/: 01-query-table-dyn.rs  01-query-table.rs  02-query-table-static.rs  02-query-table-to-string.rs  03-query-data-to-df.rs  05-query-table-to-string-static.rs  06-query-data-to-df-static.rs
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  table.rs  tables.rs
src/domain/: mod.rs  table_worker.rs
src/table_worker/: dynamic.rs  mod.rs  stat.rs
src/tables/: aircrafts_data.rs  airports_data.rs  boarding_passes.rs  bookings.rs  flights.rs  mod.rs  seats.rs  table.rs  ticket_flights.rs  tickets.rs
src/utils/: constants.rs  mod.rs  queryparser.rs  utils.rs
tests/api/: aircrafts_data.rs  airports_data.rs  boarding_passes.rs  bookings.rs  flights.rs  helpers.rs  main.rs  seats.rs  ticket_flights.rs  tickets.rs
